Fix action button vertical alignment in iPad macinyos and winpos themes

--- a/Source/Theming/posts-view-219-macinyos.less
+++ b/Source/Theming/posts-view-219-macinyos.less
@@ -78,6 +78,11 @@ header {
   border: 1px solid black;
   border-radius: 4px;
   -webkit-font-smoothing: antialiased;
+  
+  .ipad & {
+    margin-top: 12px;
+  }
+  
 }
 
 .postbody a {
