--- a/Source/Theming/posts-view-219-winpos95.less
+++ b/Source/Theming/posts-view-219-winpos95.less
@@ -83,6 +83,10 @@ header {
     color: #000;
     font-weight: bold;
   }
+  
+  .ipad & {
+    margin-top: 10px;
+  }
 }
 
 .postbody a {
